--- a/Scorekeeper/scorekeeper.css
+++ b/Scorekeeper/scorekeeper.css
@@ -1,5 +1,20 @@
+h1 {
+  font-size: 60px;
+  color: rgb(0, 100, 200);
+}
+
 h2 {
   font-size: 40px;
+}
+
+p {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+input {
+  line-height: 25px;
+  margin-bottom: 0;
 }
 
 .winner {
@@ -10,6 +25,26 @@ h2 {
   color: red;
 }
 
+.btn {
+  color: white;
+  font-size: 16px;
+  padding: 10px;
+  background-color: rgb(66, 88, 124);
+  border: 2px solid black;
+  border-radius: 10px;
+  box-shadow: 3px 3px 3px black;
+  outline: none;
+  margin: 5px;
+}
+
 #container {
   text-align: center;
+  margin: 0 auto;
+}
+
+#background {
+  width: 500px;
+  border: 1px solid black;
+  margin: 0 auto;
+  background-color: #bac0d8;
 }
