--- a/c9projects/RESTful_Routing/PhotoApp/views/partials/header.ejs
+++ b/c9projects/RESTful_Routing/PhotoApp/views/partials/header.ejs
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="ui three item menu container">
-            <a class="active item"><i class="camera retro icon"></i><strong>PhotoBox</strong></a>
+            <div class="item"><i class="camera retro icon"></i><strong>PHOTOBOX</strong></div>
             <a class="item" href="/photos">Home</a>
             <a class="item" href="/photos/new">Add Photo</a>
         </div>
