--- a/c9projects/RESTful_Routing/PhotoApp/views/show.ejs
+++ b/c9projects/RESTful_Routing/PhotoApp/views/show.ejs
@@ -1,14 +1,17 @@
 <% include ./partials/header.ejs %>
     <div class="container">
        <div class="polaroid">
-           <img width="600" height="400" src="<%= photo.image %>">
+           <img width="600" height="350" src="<%= photo.image %>">
            <div>
                <p><%= photo.caption %></p>
            </div>
        </div>
-       <a class="ui orange basic button" href="/photos/<%= photo._id %>/edit">Edit</a>
+       <div>
+       <a class="ui orange button" href="/photos/<%= photo._id %>/edit">Edit</a>
        <form id="delete"action="/photos/<%= photo._id %>?_method=DELETE" method="POST">
-           <button class="ui red basic button">Delete</button>
+           <button class="ui red button">Delete</button>
        </form>
+       <a class="ui teal button" href="/">Back</a>
+       </div>
     </div>
 <% include ./partials/footer.ejs %>
