--- a/c9projects/RESTful_Routing/PhotoApp/public/stylesheets/app.css
+++ b/c9projects/RESTful_Routing/PhotoApp/public/stylesheets/app.css
@@ -19,6 +19,13 @@ img {
     margin: auto;
 }
 
+body {
+    background: #141E30;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    color: white;
+}
+
 p {
     padding: 10px 25px;
 }
@@ -29,4 +36,12 @@ p {
 
 #delete {
     display: inline;
+}
+
+.teal.button {
+    margin-bottom: 25px;
+}
+
+.main.text.container.segment {
+    margin-top: 150px;
 }
