--- a/c9projects/RESTful_Routing/PhotoApp/views/new.ejs
+++ b/c9projects/RESTful_Routing/PhotoApp/views/new.ejs
@@ -1,9 +1,16 @@
 <% include ./partials/header.ejs %>
-    <div class="ui huge header">Add Photo</div>
-        <form action="/photos" method="POST">
-            <input type="text" name="photo[caption]" placeholder="caption">
-            <input type="text" name="photo[image]" placeholder="image url">
-            <input type="submit">
-        </form>
-
+    <div class="ui main text container segment">
+        <div class="ui huge header">Add Photo</div>
+            <form class="ui form" action="/photos" method="POST">
+                <div class="field">
+                <label>Image Caption</label>    
+                <input type="text" name="photo[caption]">
+                </div>
+                <div class="field">
+                <label>Image Url</label>
+                <input type="text" name="photo[image]">
+                </div>
+                <input class="ui green button" type="submit">
+            </form>
+    </div>
 <% include ./partials/footer.ejs %>
