added caps to show page

--- a/c9projects/RESTful_Routing/PhotoApp/views/show.ejs
+++ b/c9projects/RESTful_Routing/PhotoApp/views/show.ejs
@@ -3,7 +3,7 @@
        <div class="polaroid">
            <img width="600" height="350" src="<%= photo.image %>">
            <div>
-               <p><%= photo.caption %></p>
+               <p class="showtxt"><strong><%= photo.caption %></strong></p>
            </div>
        </div>
        <div>
